--- a/DevelopmentProject/app/src/main/res/drawable/checkbox_unchecked.xml
+++ b/DevelopmentProject/app/src/main/res/drawable/checkbox_unchecked.xml
@@ -1,51 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <item>
-            <shape
-                android:shape="rectangle">
-                <size android:width="24dp" android:height="24dp"/>
-                <solid android:color="@android:color/transparent"/>
-                <stroke android:color="@color/blackGray" android:width="2dp"></stroke>
-                <corners android:radius="6dp"></corners>
-            </shape>
-        </item>
+    <item>
+        <shape
+            android:shape="rectangle">
+            <size android:width="16dp" android:height="16dp"/>
+            <solid android:color="@android:color/transparent"/>
+            <stroke android:color="@color/turuncu" android:width="2dp"></stroke>
+            <corners android:radius="3dp"></corners>
+        </shape>
+    </item>
 
-        <item
-            android:top="2dp"
-            android:bottom="2dp"
-            android:left="2dp"
-            android:right="2dp"
+    <item
+        android:top="2dp"
+        android:bottom="2dp"
+        android:left="2dp"
+        android:right="2dp"
+        >
+        <shape
+            android:shape="rectangle"
             >
-            <shape
-                android:shape="rectangle"
-                >
-                <size android:width="24dp" android:height="24dp"></size>
-                <solid android:color="@android:color/transparent"></solid>
+            <size android:width="16dp" android:height="16dp"></size>
+            <solid android:color="@android:color/transparent"></solid>
+        </shape>
+    </item>
 
-            </shape>
-        </item>
-
-        <item
-            android:top="4dp"
-            android:bottom="4dp"
-            android:left="4dp"
-            android:right="4dp"
+    <item
+        android:top="4dp"
+        android:bottom="4dp"
+        android:left="4dp"
+        android:right="4dp"
+        >
+        <shape
+            android:shape="rectangle"
             >
-            <shape
-                android:shape="rectangle"
-                >
-                <size android:width="24dp" android:height="24dp"></size>
-                <solid android:color="@color/blackGray"></solid>
-                <corners android:radius="6dp"></corners>
-            </shape>
-        </item>
-    </layer-list>
-
-
-
-
-
-
-
+            <size android:width="16dp" android:height="16dp"></size>
+            <solid android:color="@color/turuncu"></solid>
+            <corners android:radius="2dp"></corners>
+        </shape>
+    </item>
+</layer-list>
