--- a/DevelopmentProject/app/src/main/res/drawable/ic_checked_white.xml
+++ b/DevelopmentProject/app/src/main/res/drawable/ic_checked_white.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:name="checkbox_vector"
-    android:width="24dp" android:height="24dp"
+    android:width="18.3dp" android:height="18.3dp"
     android:viewportWidth="24" android:viewportHeight="24">
     <path
         android:name="check_path"
@@ -9,5 +9,6 @@
         android:strokeWidth="2"
         android:pathData="M4,12 L10,18 L20,6"
         android:trimPathStart="0"
-        android:trimPathEnd="0"/>
+        android:trimPathEnd="0"
+        />
 </vector>
