--- a/DevelopmentProject/app/src/main/res/layout/fragment_register_screen.xml
+++ b/DevelopmentProject/app/src/main/res/layout/fragment_register_screen.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_style">
@@ -176,14 +177,38 @@
                         />
                 </com.google.android.material.textfield.TextInputLayout>
 
-
-                <androidx.appcompat.widget.AppCompatCheckBox
-                    android:id="@+id/KVKKCheckBox"
-                    android:layout_width="wrap_content"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/KVKKCheckBoxConstraintBox"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="20dp"
-                    android:text="KVKK metnini okudum ve onaylıyorum" />
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginTop="16dp">
+
+                    <androidx.appcompat.widget.AppCompatCheckBox
+                        android:id="@+id/KVKKCheckBox"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="20dp"
+                        android:text="" />
+
+
+                    <TextView
+                        android:id="@+id/KVKKCheckBoxTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="-20dp"
+                        android:text="KVKK metinini okudum ve onaylıyorum"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/KVKKCheckBox"
+                        app:layout_constraintTop_toTopOf="parent"></TextView>
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
 
 
                 <Button
