--- a/DevelopmentProject/app/src/main/res/drawable/ic_checked_white.xml
+++ b/DevelopmentProject/app/src/main/res/drawable/ic_checked_white.xml
@@ -1,11 +1,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:name="checkbox_vector"
-    android:width="18.3dp" android:height="18.3dp"
+    android:width="14dp" android:height="14dp"
     android:viewportWidth="24" android:viewportHeight="24">
     <path
         android:name="check_path"
         android:fillColor="@android:color/transparent"
-        android:strokeColor="@android:color/white"
+        android:strokeColor="@color/turuncu"
         android:strokeWidth="2"
         android:pathData="M4,12 L10,18 L20,6"
         android:trimPathStart="0"
