--- a/DevelopmentProject/app/src/main/res/layout/fragment_login_screen.xml
+++ b/DevelopmentProject/app/src/main/res/layout/fragment_login_screen.xml
@@ -111,8 +111,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
-                    android:background="@drawable/input_box_style"
-                    android:hint="Email">
+                    android:background="@drawable/text_input_bg_selector"
+                    android:hint="Email"
+                    >
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/emailInputBox"
@@ -129,7 +130,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
                     android:layout_marginTop="16dp"
-                    android:background="@drawable/input_box_style"
+                    android:background="@drawable/text_input_bg_selector"
                     android:hint="Şifre"
                     app:endIconMode="password_toggle">
 
