Input kutularındaki cursor'ların renkleri değiştirildi

--- a/DevelopmentProject/app/src/main/res/layout/fragment_forgot_your_password.xml
+++ b/DevelopmentProject/app/src/main/res/layout/fragment_forgot_your_password.xml
@@ -79,7 +79,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
                     android:background="@drawable/text_input_bg_selector"
-                    android:hint="E-posta">
+                    android:hint="E-posta"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
+                    >
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/forgotPasswordEmailInputEditText"
@@ -96,7 +99,10 @@
                     android:layout_marginHorizontal="20dp"
                     android:layout_marginTop="20dp"
                     android:background="@drawable/text_input_bg_selector"
-                    android:hint="Onay Kodu">
+                    android:hint="Onay Kodu"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
+                    >
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/onayKoduInputEditText"
@@ -113,7 +119,10 @@
                     android:layout_marginHorizontal="20dp"
                     android:layout_marginTop="20dp"
                     android:background="@drawable/text_input_bg_selector"
-                    android:hint="Yeni Şifre">
+                    android:hint="Yeni Şifre"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
+                    >
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/newPasswordInputEditText"
@@ -130,7 +139,10 @@
                     android:layout_marginHorizontal="20dp"
                     android:layout_marginTop="20dp"
                     android:background="@drawable/text_input_bg_selector"
-                    android:hint="Şifreyi Onayla">
+                    android:hint="Şifreyi Onayla"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
+                    >
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/newPasswordAgainEditText"
