Guideline ayarları kaldırıldı onun yerine daha dinamik bir ekran eklendi.

--- a/DevelopmentProject/app/src/main/res/layout/fragment_forgot_your_password.xml
+++ b/DevelopmentProject/app/src/main/res/layout/fragment_forgot_your_password.xml
@@ -3,14 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:background="@drawable/background_style">
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guide_header_bottom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.45" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/forgotPasswordHeaderImageConstraintBox"
@@ -19,7 +13,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/guide_header_bottom">
+        app:layout_constraintBottom_toTopOf="@id/forgotPasswordFormFieldBox">
 
         <ImageView
             android:id="@+id/forgotPasswordImageView"
@@ -35,14 +29,14 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/forgotPasswordFormFieldBox"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="-30dp"
         android:background="@drawable/form_field_box_style"
         android:fitsSystemWindows="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/guide_header_bottom">
+        app:layout_constraintTop_toBottomOf="@id/forgotPasswordHeaderImageConstraintBox">
 
         <TextView
             android:id="@+id/yeniSifreTextBox"
@@ -59,7 +53,7 @@
         <androidx.core.widget.NestedScrollView
             android:id="@+id/formScrollView"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:fillViewport="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
