--- a/DevelopmentProject/app/src/main/res/layout/fragment_forgot_your_password.xml
+++ b/DevelopmentProject/app/src/main/res/layout/fragment_forgot_your_password.xml
@@ -3,8 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    android:background="@drawable/background_style">
+    android:fitsSystemWindows="true">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginBottom="-100dp"
+        android:background="@drawable/background_style"
+        app:layout_constraintBottom_toTopOf="@+id/forgotPasswordFormFieldBox"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/forgotPasswordHeaderImageConstraintBox"
